@@ -1,5 +1,5 @@
 /*
-    Copyright 2016, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2016-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -7,7 +7,6 @@
 
 
 #include <fost/csj.parser.hpp>
-#include <fost/parse/json.hpp>
 #include <fost/insert>
 
 
@@ -18,22 +17,11 @@ namespace {
     ) {
         into.clear();
         if ( pos != end ) {
-            auto linestr = fostlib::coerce<std::wstring>(*pos);
-            auto append_column = [&into](auto v) {
-                    into.push_back(v);
-                };
             fostlib::parser_lock lock;
-            auto parse_result = fostlib::parse(lock,
-                linestr.c_str(),
-                    *boost::spirit::space_p
-                    >> parser[append_column]
-                    >> *(
-                        *boost::spirit::space_p
-                        >> boost::spirit::chlit< wchar_t >(L',')
-                        >> *boost::spirit::space_p
-                        >> parser[append_column])
-                    >> *boost::spirit::space_p);
-            if ( not parse_result.full ) {
+            auto line_pos = f5::make_u32u16_iterator((*pos).begin(), (*pos).end());
+            if ( not boost::spirit::qi::parse(line_pos.first, line_pos.second, parser, into)
+                    || line_pos.first != line_pos.second )
+            {
                 throw fostlib::exceptions::not_implemented(__func__,
                         "Could not parse row", *pos);
             }
@@ -52,7 +40,7 @@ fostlib::csj::parser::parser(utf::u8_view str)
     li_pos(line_iter.begin()),
     li_end(line_iter.end())
 {
-    parseline(fostlib::json_string_parser(), li_pos, li_end, headers);
+    parseline(headers_p, li_pos, li_end, headers);
     if ( not headers.size() ) {
         throw exceptions::not_implemented(__func__,
             "No headers were found when parsing CSJ");
@@ -77,16 +65,16 @@ fostlib::csj::parser::const_iterator fostlib::csj::parser::end() const {
 fostlib::csj::parser::const_iterator::const_iterator(
     const parser &o, line_iter_t::const_iterator p
 ) : owner(o), pos(p) {
-    parseline(fostlib::json_p, pos, owner.li_end, line);
+    parseline(owner.line_p, pos, owner.li_end, line);
 }
 
 
 fostlib::csj::parser::const_iterator &fostlib::csj::parser::const_iterator::operator ++ () {
-    parseline(fostlib::json_p, ++pos, owner.li_end, line);
+    parseline(owner.line_p, ++pos, owner.li_end, line);
     if ( not line.size() ) {
         // We've hit a blank line. Make sure we only get them from now on
         while ( pos != owner.li_end ) {
-            parseline(fostlib::json_p, ++pos, owner.li_end, line);
+            parseline(owner.line_p, ++pos, owner.li_end, line);
             if ( line.size() ) {
                 throw exceptions::not_implemented(__func__,
                     "Empty line embedded in CSJ file");
