@@ -1,0 +1,26 @@
+#!/bin/bash
+cd `dirname $0`
+
+export VARIANTS=$*
+
+if test -e /proc/
+then {
+    export CPUCOUNT=`grep -c ^processor /proc/cpuinfo`
+    [ `which clang++` ] || export TOOLSET=toolset=gcc
+    export LD_LIBRARY_PATH=../dist/lib
+} else {
+    export CPUCOUNT=`sysctl -n hw.ncpu`
+    export TOOLSET=toolset=darwin
+    export DYLD_LIBRARY_PATH=../dist/lib
+    export LANG=C
+}
+fi
+
+if ../bjam -j$CPUCOUNT $TOOLSET $VARIANTS
+then {
+    echo fostgres $VARIANTS OK
+    exit 0
+} else {
+    exit 1
+}
+fi
